--- a/style.css
+++ b/style.css
@@ -16,20 +16,23 @@ main {
   position: relative;
 }
 main .main-container {
-  width: 70%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+}
+main .main-container .head h1 {
+  font-size: 3em;
 }
 main .main-container .nav {
-  width: 100%;
+  width: 40%;
   height: 4em;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3rem;
-  background-color: aqua;
+  padding: 3rem 0;
 }
 main .main-container .nav .target {
   display: flex;
@@ -37,6 +40,9 @@ main .main-container .nav .target {
   align-items: center;
   gap: 1em;
   font-size: 1.3em;
+  background-color: rgb(170, 115, 115);
+  padding: 0.5em;
+  border-radius: 0.7em;
 }
 main .main-container .nav .time {
   display: flex;
@@ -44,6 +50,9 @@ main .main-container .nav .time {
   align-items: center;
   gap: 1em;
   font-size: 1.3em;
+  background-color: rgb(170, 115, 115);
+  padding: 0.5em;
+  border-radius: 0.7em;
 }
 main .main-container .nav .score {
   display: flex;
@@ -51,9 +60,12 @@ main .main-container .nav .score {
   align-items: center;
   gap: 1em;
   font-size: 1.3em;
+  background-color: rgb(170, 115, 115);
+  padding: 0.5em;
+  border-radius: 0.7em;
 }
 main .main-container .bubbles-container {
-  width: 100%;
+  width: 40%;
   height: 100%;
   padding: 2em;
   background-color: bisque;
@@ -62,10 +74,10 @@ main .main-container .bubbles-container {
   gap: 1.5em;
   flex-shrink: 1;
 }
-main .main-container .bubbles-container .curcle {
+main .main-container .bubbles-container .circle {
   flex-grow: 1;
-  height: 70px;
-  width: 60px;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
   background-color: cadetblue;
   display: flex;
