--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ main .main-container .nav .target {
   justify-content: center;
   align-items: center;
   gap: 1em;
-  font-size: 1.3em;
+  font-size: 1.2em;
   background-color: rgb(170, 115, 115);
   padding: 0.5em;
   border-radius: 0.7em;
@@ -49,7 +49,7 @@ main .main-container .nav .time {
   justify-content: center;
   align-items: center;
   gap: 1em;
-  font-size: 1.3em;
+  font-size: 1.2em;
   background-color: rgb(170, 115, 115);
   padding: 0.5em;
   border-radius: 0.7em;
@@ -59,7 +59,7 @@ main .main-container .nav .score {
   justify-content: center;
   align-items: center;
   gap: 1em;
-  font-size: 1.3em;
+  font-size: 1.2em;
   background-color: rgb(170, 115, 115);
   padding: 0.5em;
   border-radius: 0.7em;
@@ -68,7 +68,8 @@ main .main-container .bubbles-container {
   width: 40%;
   height: 100%;
   padding: 2em;
-  background-color: bisque;
+  border: 2px solid black;
+  border-radius: 1em;
   display: flex;
   flex-wrap: wrap;
   gap: 1.5em;
